--- a/tutorial_timegan.ipynb
+++ b/tutorial_timegan.ipynb
@@ -270,7 +270,7 @@
    ],
    "source": [
     "# Run TimeGAN\n",
-    "generated_data = timegan(ori_data, parameters)   \n",
+    "generated_data = timegan(ori_data, parameters, reproduce=False)   \n",
     "print('Finish Synthetic Data Generation')"
    ]
   },
@@ -403,21 +403,6 @@
    "source": [
     "visualization(ori_data, generated_data, 'pca')\n",
     "visualization(ori_data, generated_data, 'tsne')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def list_to_df(list_):\n",
-    "    generated_df = pd.DataFrame()\n",
-    "\n",
-    "    for mat in list_:\n",
-    "        new_row = pd.Series(mat[0])\n",
-    "        generated_df = generated_df.append(new_row, ignore_index=True)\n",
-    "    return generated_df\n"
    ]
   },
   {
